--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@perawallet/connect": "^0.1.5",
-    "algosdk": "^1.18.1",
+    "@emotion/react": "11.9.3",
+    "@perawallet/connect": "0.1.5",
+    "algosdk": "1.18.1",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-toastify": "^9.0.5"
+    "react-toastify": "9.0.5"
   },
   "devDependencies": {
     "@types/node": "18.0.3",
